# krishi-mitra-ai

./: .env.example  .gitignore  .replit  app.py  pyproject.toml  replit.md  requirements.txt  schemes.json  users.json
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
utils/: auth_helper.py  crop_advisory.py  farming_calendar.py  gemini_helper.py  market_prices.py  news_helper.py  weather_helper.py
