[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.41.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "speechrecognition>=3.14.3",
    "streamlit>=1.50.0",
]
